# freshfit

./: .env.example  .gitignore  .pre-commit-config.yaml  .pylintrc  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  adk_test.py  main.py  mkdocs.yml  pyproject.toml  requirements.txt
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml
agents/: __init__.py  cloth_registrar.py  explanation_agent.py  feedback_learning.py  metrics_agent.py  outfit_designer.py  preference_ranking.py  router_agent.py  wardrobe_cataloger.py  weather_agent.py
agents/eval/: evalset0321bb.evalset.json
data/: demo_wardrobe.db
docs/: CLAUDE.md  PRD.md  agents.md  architecture.md  configuration.md  index.md  prompts.md
scripts/: create_demo_wardrobe_db.py  create_preference_db.py
tools/: __init__.py  date_tool.py  demo_wardrobe_tool.py  preference_history_tool.py
